# chatself

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
chatself/: __init__.py  cli.py
chatself/ai/: __init__.py  context.py  session.py
chatself/analytics/: __init__.py  emojis.py  patterns.py  relationships.py  timeline.py  vocabulary.py
chatself/parsers/: __init__.py  db_parser.py  txt_parser.py
chatself/report/: __init__.py  builder.py
docs/: index.html
examples/: chat_carlos.txt  demo_chat.txt  report_carlos.html  sample_chat.txt
tests/: test_txt_parser.py
