[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "chatself"
version = "0.1.0"
description = "Know yourself through your conversations"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["whatsapp", "analytics", "self-reflection", "chat", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "emoji>=2.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
ai = ["anthropic>=0.20", "openai>=1.0"]
dev = ["pytest>=7.0", "pytest-cov", "black", "ruff"]

[project.scripts]
chatself = "chatself.cli:main"

[tool.ruff]
line-length = 100
